--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<object id="siloChart1" role="svidget" data="http://localhost:8081/images/silo.svg" type="image/svg+xml" width="400" height="400">
+<object id="siloChart1" role="svidget" data="http://mwc16.azurewebsites.net/images/silo.svg" type="image/svg+xml" width="400" height="400">
 	<param name="deviceNumber" value="UBKD334F21E-3C23-11E5-8494-C3AD4A89321E" />
 	<param name="nameSilo" value="Silo1" />
 	<param name="alcadaSilo" value="578" />
@@ -18,7 +18,7 @@
 	<param name="Updated" value="1" />
 </object>
 
-<object id="siloChart2" role="svidget" data="http://localhost:8081/images/silo.svg" type="image/svg+xml" width="400" height="400">
+<object id="siloChart2" role="svidget" data="http://mwc16.azurewebsites.net/images/silo.svg" type="image/svg+xml" width="400" height="400">
 	<param name="deviceNumber" value="UBKD334F21E-3C23-11E5-8494-C3AD4A89321E" />
 	<param name="nameSilo" value="Silo2" />
 	<param name="alcadaSilo" value="878" />
@@ -29,7 +29,7 @@
 	<param name="Updated" value="1" />
 </object>
 
-<object id="siloChart3" role="svidget" data="http://localhost:8081/images/silo.svg" type="image/svg+xml" width="400" height="400">
+<object id="siloChart3" role="svidget" data="http://mwc16.azurewebsites.net/images/silo.svg" type="image/svg+xml" width="400" height="400">
 	<param name="deviceNumber" value="UBKD334F21E-3C23-11E5-8494-C3AD4A89321E" />
 	<param name="nameSilo" value="Silo3" />
 	<param name="alcadaSilo" value="678" />
@@ -40,7 +40,7 @@
 	<param name="Updated" value="1" />
 </object>
 
-<object id="siloChart4" role="svidget" data="http://localhost:8081/images/silo.svg" type="image/svg+xml" width="400" height="400">
+<object id="siloChart4" role="svidget" data="http://mwc16.azurewebsites.net/images/silo.svg" type="image/svg+xml" width="400" height="400">
 	<param name="deviceNumber" value="UBKD334F21E-3C23-11E5-8494-C3AD4A89321E" />
 	<param name="nameSilo" value="Silo4" />
 	<param name="alcadaSilo" value="278" />
