--- a/scripts/index.html
+++ b/scripts/index.html
@@ -2,10 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+	<script type="application/javascript" src="http://localhost:8081/scripts/svidget.min.js"></script>
+	<script type="application/javascript" src="http://localhost:8081/scripts/snap.svg-min.js"></script>
 </head>
 <body>
 
 <object id="siloChart1" role="svidget" data="http://localhost:8081/images/silo.svg" type="image/svg+xml" width="400" height="400">
+	<param name="hostname" value="localhost:8081" />
 	<param name="deviceNumber" value="UBKD334F21E-3C23-11E5-8494-C3AD4A89321E" />
 	<param name="nameSilo" value="Silo1" />
 	<param name="alcadaSilo" value="578" />
@@ -17,6 +20,7 @@
 </object>
 
 <object id="siloChart2" role="svidget" data="http://localhost:8081/images/silo.svg" type="image/svg+xml" width="400" height="400">
+	<param name="hostname" value="localhost:8081" />
 	<param name="deviceNumber" value="UBKD334F21E-3C23-11E5-8494-C3AD4A89321E" />
 	<param name="nameSilo" value="Silo2" />
 	<param name="alcadaSilo" value="878" />
@@ -28,6 +32,7 @@
 </object>
 
 <object id="siloChart3" role="svidget" data="http://localhost:8081/images/silo.svg" type="image/svg+xml" width="400" height="400">
+	<param name="hostname" value="localhost:8081" />
 	<param name="deviceNumber" value="UBKD334F21E-3C23-11E5-8494-C3AD4A89321E" />
 	<param name="nameSilo" value="Silo3" />
 	<param name="alcadaSilo" value="678" />
@@ -39,6 +44,7 @@
 </object>
 
 <object id="siloChart4" role="svidget" data="http://localhost:8081/images/silo.svg" type="image/svg+xml" width="400" height="400">
+	<param name="hostname" value="localhost:8081" />
 	<param name="deviceNumber" value="UBKD334F21E-3C23-11E5-8494-C3AD4A89321E" />
 	<param name="nameSilo" value="Silo4" />
 	<param name="alcadaSilo" value="278" />
